<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addressModel"
            type="com.example.cityweather.model.AddressModel" />
    </data>

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_bg_search"
            android:orientation="vertical"
            android:padding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/str_city"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/str_city"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:text="@{addressModel.cityName}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/str_geoname_id"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/str_geoname_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:text="@{addressModel.geonameId}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/str_latitude"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/str_latitude"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:text="@{addressModel.latitude}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/str_longtitude"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/str_longtitude"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:text="@{addressModel.longtitude}"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:text="@string/str_population"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/str_population"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:textColor="@android:color/black"
                    android:text="@{addressModel.population}"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_wiki"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginVertical="10dp"
                android:background="@drawable/bg_button"
                android:clickable="true"
                android:onClick="onClick">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/str_wiki"
                    android:textAllCaps="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_weather"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/bg_button"
                android:clickable="true"
                android:onClick="onClick">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/str_weather"
                    android:textAllCaps="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_images"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/bg_button"
                android:clickable="true"
                android:onClick="onClick">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/str_images"
                    android:textAllCaps="true" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_maps"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginVertical="5dp"
                android:background="@drawable/bg_button"
                android:clickable="true"
                android:onClick="onClick">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:padding="10dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/str_maps"
                    android:textAllCaps="true" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</layout>